Adding Carousel in Home Page

--- a/index.html
+++ b/index.html
@@ -83,12 +83,123 @@
         <!-------------------------HEADER SECTION END------------------------------------->
 
 
+
+
         <!-------------------------CAROUSEL SECTION START------------------------------------->
         <!-------------------------CAROUSEL SECTION START------------------------------------->
         <!-------------------------CAROUSEL SECTION START------------------------------------->
         <section id="carousel-section">
-            
+            <div class="ticker">
+                <div class="scroll-ticker">
+                    <marquee behavior="scroll" scrollamount="10" direction="left">
+                        <p>
+                            Welcome to E-Grocery! Get your daily needs easy and instant from our shop. 
+                            Buy fresh and organic fruits with a big discount! Please use this voucher code 
+                            (#234307) to get upto 50% discunt from your total purchase.
+                            Dear sir, Now you can get upto 50% discount of any product just 
+                            using this voucher code (#234307). 
+                            Don't forget to submit this code at the checkout time of your purchase. Thank You!
+                        </p>
+                    </marquee>
+                </div>
+            </div>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" 
+                        data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1">
+                    </button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" 
+                        data-bs-slide-to="1" aria-label="Slide 2">
+                    </button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" 
+                        data-bs-slide-to="2" aria-label="Slide 3">
+                    </button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" 
+                        data-bs-slide-to="3" aria-label="Slide 4">
+                    </button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" 
+                    data-bs-slide-to="4" aria-label="Slide 5">
+                    </button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" 
+                    data-bs-slide-to="5" aria-label="Slide 6">
+                    </button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active c-item">
+                        <img src="img/background/about.jpg" class="d-block w-100 c-img" alt="carousel-image">
+                        <div class="carousel-caption top-0 mt-4">
+                            <p class="mt-5 fs-3 fw-bolder text-capitalize">Hot deals available with</p>
+                            <h1 class="display-1 fw-bolder text-capitalize">amazing products</h1>
+                            <button class="btn px-4 py-2 fs-5 mt-5">Explore</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item c-item">
+                        <img src="img/background/about-1.jpg" class="d-block w-100 c-img" alt="carousel-image">
+                        <div class="carousel-caption top-0 mt-4">
+                            <p class="mt-5 fs-3 fw-bolder text-capitalize">Fresh vegetables with a</p>
+                            <h1 class="display-1 fw-bolder text-capitalize">big discount</h1>
+                            <button class="btn px-4 py-2 fs-5 mt-5">Explore</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item c-item">
+                        <img src="img/background/about-2.png" class="d-block w-100 c-img" alt="carousel-image">
+                        <div class="carousel-caption top-0 mt-4">
+                            <p class="mt-5 fs-3 fw-bolder text-capitalize">The best dried fruits for</p>
+                            <h1 class="display-1 fw-bolder text-capitalize">your family health</h1>
+                            <button class="btn px-4 py-2 fs-5 mt-5">Explore</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item c-item">
+                        <img src="img/background/about-3.png" class="d-block w-100 c-img" alt="carousel-image">
+                        <img src="#" class="d-block w-100 c-img" alt="...">
+                        <div class="carousel-caption top-0 mt-4">
+                            <p class="mt-5 fs-3 fw-bolder text-capitalize">Get your daily needs</p>
+                            <h1 class="display-1 fw-bolder text-capitalize">easy and instant</h1>
+                            <button class="btn px-4 py-2 fs-5 mt-5">Explore</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item c-item">
+                        <img src="img/background/about-4.jpg" class="d-block w-100 c-img" alt="carousel-image">
+                        <img src="#" class="d-block w-100 c-img" alt="...">
+                        <div class="carousel-caption top-0 mt-4">
+                            <p class="mt-5 fs-3 fw-bolder text-capitalize">Try fresh fruits for better</p>
+                            <h1 class="display-1 fw-bolder text-capitalize">healthy lifestyle</h1>
+                            <button class="btn px-4 py-2 fs-5 mt-5">Explore</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item c-item">
+                        <img src="img/background/about-5.jpg" class="d-block w-100 c-img" alt="carousel-image">
+                        <img src="#" class="d-block w-100 c-img" alt="...">
+                        <div class="carousel-caption top-0 mt-4">
+                            <p class="mt-5 fs-3 fw-bolder text-capitalize">Get upto 50% discount</p>
+                            <h1 class="display-1 fw-bolder text-capitalize">on every products</h1>
+                            <button class="btn px-4 py-2 fs-5 mt-5">Explore</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" 
+                    data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" 
+                    data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </section>
+        <!-------------------------CAROUSEL SECTION END------------------------------------->
+        <!-------------------------CAROUSEL SECTION END------------------------------------->
+        <!-------------------------CAROUSEL SECTION END------------------------------------->
+
+
+
+
+
+
+
+
 
 
         <script src="script.js"></script>
