Adding Service Card Wrap in Services Section

--- a/index.html
+++ b/index.html
@@ -494,6 +494,108 @@
                     </div>
                 </div>
             </div>
+            <div class="service-card-wrap">
+                <div class="service-image-wrap">
+                    <div class="service-image">
+                        <img src="img/background/service-img.jpg" alt="">
+                    </div>
+                    <div class="service-image-text">
+                        <h1>Our Services</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur libero neque officia 
+                            eum quaerat sapiente est debitis
+                        </p>
+                    </div>
+                </div>
+                <div class="service-cards">
+                    <div class="row row-col-4 col-md-12 first-card">
+                        <div class="col-md-1 first-number-card">
+                            <h1>01</h1>
+                        </div>
+                        <div class="col first-description-card">
+                            <h3>Fresh Products</h3>
+                            <p>
+                                Qutem optio alias ducimus
+                                dignissimos consequuntur unde iure illum sapiente explicabo dolore pariatur eligendi
+                                fuga asperiores lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                            <p><a class="first-read-more" href="#">Read More >></a></p>
+                        </div>
+                        <div class="col-md-1 second-number-card">
+                            <h1>02</h1>
+                        </div>
+                        <div class="col second-description-card">
+                            <h3>Fast Delivery</h3>
+                            <p>
+                                Qutem optio alias ducimus
+                                dignissimos consequuntur unde iure illum sapiente explicabo dolore 
+                                pariatur eligendi fuga asperiores lorem ipsum dolor sit amet consectetur 
+                                adipisicing elit.
+                            </p>
+                            <p><a class="second-read-more" href="#">Read More >></a></p>
+                        </div>
+                    </div>
+                    <div class="row row-col-4 col-md-12 second-card">
+                        <div class="col-md-1 third-number-card">
+                            <h1>03</h1>
+                        </div>
+                        <div class="col third-description-card">
+                            <h3>Best Pricing</h3>
+                            <p>
+                                Qutem optio alias ducimus
+                                dignissimos consequuntur unde iure illum sapiente explicabo dolore 
+                                pariatur eligendi fuga asperiores lorem ipsum dolor sit amet consectetur 
+                                adipisicing elit.
+                            </p>
+                            <p><a class="third-read-more" href="#">Read More >></a></p>
+                        </div>
+                        <div class="col-md-1 fourth-number-card">
+                            <h1>04</h1>
+                        </div>
+                        <div class="col fourth-description-card">
+                            <h3>Random Offers</h3>
+                            <p>
+                                Qutem optio alias ducimus
+                                dignissimos consequuntur unde iure illum sapiente explicabo dolore 
+                                pariatur eligendi fuga asperiores lorem ipsum dolor sit amet consectetur 
+                                adipisicing elit.
+                            </p>
+                            <p><a class="fourth-read-more" href="#">Read More >></a></p>
+                        </div>
+                    </div>
+                    <div class="row row-col-4 col-md-12 third-card">
+                        <div class="col-md-1 fifth-number-card">
+                            <h1>05</h1>
+                        </div>
+                        <div class="col fifth-description-card">
+                            <h3>Easy Payment</h3>
+                            <p>
+                                Qutem optio alias ducimus
+                                dignissimos consequuntur unde iure illum sapiente explicabo dolore 
+                                pariatur eligendi fuga asperiores lorem ipsum dolor sit amet consectetur 
+                                adipisicing elit.
+                            </p>
+                            <p><a class="fifth-read-more" href="#">Read More >></a></p>
+                        </div>
+                        <div class="col-md-1 sixth-number-card">
+                            <h1>06</h1>
+                        </div>
+                        <div class="col sixth-description-card">
+                            <h3>Customer Support</h3>
+                            <p>
+                                Qutem optio alias ducimus
+                                dignissimos consequuntur unde iure illum sapiente explicabo dolore 
+                                pariatur eligendi fuga asperiores lorem ipsum dolor sit amet consectetur 
+                                adipisicing elit.
+                            </p>
+                            <p><a class="sixth-read-more" href="#">Read More >></a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
         </section>
         <!-------------------------SERVICES SECTION END------------------------------------->
         <!-------------------------SERVICES SECTION END------------------------------------->
