--- a/index.html
+++ b/index.html
@@ -1797,8 +1797,61 @@
         <!-------------------------COMING SOON BIG OFFER SECTION START------------------------------------->
         <!-------------------------COMING SOON BIG OFFER SECTION START------------------------------------->
         <section id="big-offer-soon-section">
-            
+            <div class="hot-deals">
+                <div class="section-wrap">
+                    <div class="hot-deals-title">
+                        <h1>Big Offers Comming Soon...</h1>
+                    </div>
+                    <div class="countdown-wrap">
+                        <div class="timer">
+                            <div class="timer-bg"></div>
+                            <div class="counter">
+                                <h1 id="day">00</h1>
+                                <p>Days</p>
+                            </div>
+                        </div>
+                        <div class="timer">
+                            <div class="timer-bg"></div>
+                            <div class="counter">
+                                <h1 id="hour">00</h1>
+                                <p>Hours</p>
+                            </div>
+                        </div>
+                        <div class="timer">
+                            <div class="timer-bg"></div>
+                            <div class="counter">
+                                <h1 id="minute">00</h1>
+                                <p>Minutes</p>
+                            </div>
+                        </div>
+                        <div class="timer">
+                            <div class="timer-bg"></div>
+                            <div class="counter">
+                                <h1 id="second">00</h1>
+                                <p>Seconds</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-------------------------COMING SOON BIG OFFER SECTION END------------------------------------->
+        <!-------------------------COMING SOON BIG OFFER SECTION END------------------------------------->
+        <!-------------------------COMING SOON BIG OFFER SECTION END------------------------------------->
+
+
+
+
+        <!-------------------------GREAT DEALS SECTION START------------------------------------->
+        <!-------------------------GREAT DEALS SECTION START------------------------------------->
+        <!-------------------------GREAT DEALS SECTION START------------------------------------->
+        <div id="great-deals-section">
+            
+        </div>
+
+
+
+
 
 
         <script src="script.js"></script>
