Adding Links and Fixed Position for the Header

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                                 <a class="nav-link" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="#about-section-home-link">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Services</a>
+                                <a class="nav-link" href="#services-section-home-link">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Products</a>
+                                <a class="nav-link" href="#featured-products-section-home-link">Products</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
@@ -390,6 +390,7 @@
         <!-------------------------ABOUT SECTION START------------------------------------->
         <!-------------------------ABOUT SECTION START------------------------------------->
         <!-------------------------ABOUT SECTION START------------------------------------->
+        <div id="about-section-home-link"></div>
         <section id="about-section">
             <div class="container">
                 <div class="row">
@@ -453,6 +454,7 @@
         <!-------------------------SERVICES SECTION START------------------------------------->
         <!-------------------------SERVICES SECTION START------------------------------------->
         <!-------------------------SERVICES SECTION START------------------------------------->
+        <div id="services-section-home-link"></div>
         <section id="services-section">
             <div class="container">
                 <div class="row">
@@ -1039,6 +1041,7 @@
         <!-------------------------FEATURED PRODUCTS SECTION START------------------------------------->
         <!-------------------------FEATURED PRODUCTS SECTION START------------------------------------->
         <!-------------------------FEATURED PRODUCTS SECTION START------------------------------------->
+        <div id="featured-products-section-home-link"></div>
         <div id="featured-products-section">
             <h2 class="container collection-title">Featured Products</h2> 
             <!-- VEGETABLES START -->
@@ -2074,8 +2077,11 @@
         <!-------------------------GRADING PRODUCTS SECTION START------------------------------------->
         <!-------------------------GRADING PRODUCTS SECTION START------------------------------------->
        <section id="grading-section-start">
-            
+
        </section>
+        <!-------------------------GRADING PRODUCTS SECTION END------------------------------------->
+        <!-------------------------GRADING PRODUCTS SECTION END------------------------------------->
+        <!-------------------------GRADING PRODUCTS SECTION END------------------------------------->
 
 
 
