--- a/index.html
+++ b/index.html
@@ -2073,15 +2073,72 @@
 
 
         
-        <!-------------------------GRADING PRODUCTS SECTION START------------------------------------->
-        <!-------------------------GRADING PRODUCTS SECTION START------------------------------------->
-        <!-------------------------GRADING PRODUCTS SECTION START------------------------------------->
-       <section id="grading-section-start">
+        <!-------------------------FAQ SECTION START------------------------------------->
+        <!-------------------------FAQ SECTION START------------------------------------->
+        <!-------------------------FAQ SECTION START------------------------------------->
+        <section id="faq-section">
+            <div class="faq-section">
+                <div class="section-wrap faq-section-wrap">
+                    <div class="faq-content">
+                        <div class="faq-content-title">
+                            <h1>Frequently Asked Question (FAQ)</h1>
+                        </div>
+                        <div class="faq-content-wrap">
+                            <div class="accordion-box">
+                                <p class="faq-title">01. Who we are? <span class="icon-angle-right faq-icon"></span></p>
+                                <p class="faq-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
+                                    aliquam tempora excepturi quo voluptas aperiam omnis illum. Illo laudantium aliquam
+                                    accusantium tenetur corporis cumque quos eaque quam voluptatibus dignissimos vitae
+                                    blanditiis officiis animi incidunt explicabo placeat quisquam necessitatibus architecto.
+                                </p>
+                            </div>
+                            <div class="accordion-box">
+                                <p class="faq-title">02. What we provide? <span class="icon-angle-right faq-icon"></span>
+                                </p>
+                                <p class="faq-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
+                                    aliquam tempora excepturi quo voluptas aperiam omnis illum. Illo laudantium aliquam
+                                    accusantium tenetur corporis cumque quos eaque quam voluptatibus dignissimos vitae
+                                    blanditiis officiis animi incidunt explicabo placeat quisquam necessitatibus architecto.
+                                </p>
+                            </div>
+                            <div class="accordion-box">
+                                <p class="faq-title">03. Why our services best? <span
+                                        class="icon-angle-right faq-icon"></span>
+                                </p>
+                                <p class="faq-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
+                                    aliquam tempora excepturi quo voluptas aperiam omnis illum. Illo laudantium aliquam
+                                    accusantium tenetur corporis cumque quos eaque quam voluptatibus dignissimos vitae
+                                    blanditiis officiis animi incidunt explicabo placeat quisquam necessitatibus architecto.
+                                </p>
+                            </div>
+                            <div class="accordion-box">
+                                <p class="faq-title">04. How we manage our services? <span
+                                        class="icon-angle-right faq-icon"></span></p>
+                                <p class="faq-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
+                                    aliquam tempora excepturi quo voluptas aperiam omnis illum. Illo laudantium aliquam
+                                    accusantium tenetur corporis cumque quos eaque quam voluptatibus dignissimos vitae
+                                    blanditiis officiis animi incidunt explicabo placeat quisquam necessitatibus architecto.
+                                </p>
+                            </div>
+                            <div class="accordion-box">
+                                <p class="faq-title">05. How we atchieve our customer satisfaction? <span
+                                        class="icon-angle-right faq-icon"></span></p>
+                                <p class="faq-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolor
+                                    aliquam tempora excepturi quo voluptas aperiam omnis illum. Illo laudantium aliquam
+                                    accusantium tenetur corporis cumque quos eaque quam voluptatibus dignissimos vitae
+                                    blanditiis officiis animi incidunt explicabo placeat quisquam necessitatibus architecto.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-------------------------FAQ SECTION END------------------------------------->
+        <!-------------------------FAQ SECTION END------------------------------------->
+        <!-------------------------FAQ SECTION END------------------------------------->
 
-       </section>
-        <!-------------------------GRADING PRODUCTS SECTION END------------------------------------->
-        <!-------------------------GRADING PRODUCTS SECTION END------------------------------------->
-        <!-------------------------GRADING PRODUCTS SECTION END------------------------------------->
+       
 
 
 
