Adding Blogs and Reviews Section

--- a/index.html
+++ b/index.html
@@ -2138,8 +2138,148 @@
         <!-------------------------FAQ SECTION END------------------------------------->
         <!-------------------------FAQ SECTION END------------------------------------->
 
+
+
+
+        <!-------------------------BLOGS AND REVIEWS SECTION START------------------------------------->
+        <!-------------------------BLOGS AND REVIEWS SECTION START------------------------------------->
+        <!-------------------------BLOGS AND REVIEWS SECTION START------------------------------------->
+        <section id="blogs-reviews-section">
+            <div class="blog">
+                <div class="section-wrap">
+                    <div class="section-title">
+                        <h2 class="container container-titles">Blogs & Reviews</h2>
+                    </div>
+                    <div class="blog-wrap">
+                        <div class="container container-titles-read">
+                            <h3 class="featured-collect-collections">Recent Blogs</h3>
+                            <p><a class="see-more-collections" href="#">Read More >></a></p>
+                        </div>
+                        <div class="blog-content">
+                            <div class="blog-content-wrap">
+                                <div class="blog-image">
+                                    <img src="img/vegetables/cabbage.jpg" alt="">
+                                </div>
+                                <div class="blog-published-date">
+                                    <p>20 Mar 2022</p>
+                                </div>
+                                <div class="blog-title">
+                                    <a href="#">
+                                        <h2>Accusamus totam beatae nostrum tenetur voluptas pariatur</h2>
+                                    </a>
+                                </div>
+                                <div class="blog-tags">
+                                    <p><strong>Tags: </strong><span>fruits</span><span>mangoes</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <div class="blog-content-wrap">
+                                <div class="blog-image">
+                                    <img src="img/vegetables/motorshuti.jpg" alt="">
+                                </div>
+                                <div class="blog-published-date">
+                                    <p>20 Mar 2022</p>
+                                </div>
+                                <div class="blog-title">
+                                    <a href="#">
+                                        <h2>Repellat facilis itaque laudantium sequi cumque optio ideos</h2>
+                                    </a>
+                                </div>
+                                <div class="blog-tags">
+                                    <p><strong>Tags: </strong><span>fruits</span><span>mangoes</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <div class="blog-content-wrap">
+                                <div class="blog-image">
+                                    <img src="img/fruits/orange-green.jpg" alt="">
+                                </div>
+                                <div class="blog-published-date">
+                                    <p>20 Mar 2022</p>
+                                </div>
+                                <div class="blog-title">
+                                    <a href="#">
+                                        <h2>Perferendis nihil vitae cumque eius dolorum veniam saepe</h2>
+                                    </a>
+                                </div>
+                                <div class="blog-tags">
+                                    <p><strong>Tags: </strong><span>fruits</span><span>mangoes</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <div class="blog-content-wrap">
+                                <div class="blog-image">
+                                    <img src="img/vegetables/carrot.jpg" alt="">
+                                </div>
+                                <div class="blog-published-date">
+                                    <p>20 Mar 2022</p>
+                                </div>
+                                <div class="blog-title">
+                                    <a href="#">
+                                        <h2>Tempora suscipit nostrum voluptas tenetur vitae dictam</h2>
+                                    </a>
+                                </div>
+                                <div class="blog-tags">
+                                    <p><strong>Tags: </strong><span>fruits</span><span>mangoes</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <div class="blog-content-wrap">
+                                <div class="blog-image">
+                                    <img src="img/vegetables/chili.jpg" alt="">
+                                </div>
+                                <div class="blog-published-date">
+                                    <p>20 Mar 2022</p>
+                                </div>
+                                <div class="blog-title">
+                                    <a href="#">
+                                        <h2>Illum autem tempora eaque minus voluptatem numquam</h2>
+                                    </a>
+                                </div>
+                                <div class="blog-tags">
+                                    <p><strong>Tags: </strong><span>fruits</span><span>mangoes</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog-content">
+                            <div class="blog-content-wrap">
+                                <div class="blog-image">
+                                    <img src="img/eggs/koyel-egg.jpg" alt="">
+                                </div>
+                                <div class="blog-published-date">
+                                    <p>20 Mar 2022</p>
+                                </div>
+                                <div class="blog-title">
+                                    <a href="#">
+                                        <h2>Neque expedita temporibus quae illum ducimus praesentium</h2>
+                                    </a>
+                                </div>
+                                <div class="blog-tags">
+                                    <p><strong>Tags: </strong><span>fruits</span><span>mangoes</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-------------------------BLOGS AND REVIEWS SECTION END------------------------------------->
+        <!-------------------------BLOGS AND REVIEWS SECTION END------------------------------------->
+        <!-------------------------BLOGS AND REVIEWS SECTION END------------------------------------->
+
        
 
+
+        <!-------------------------CUSTOMER REVIEW SECTION START------------------------------------->
+        <!-------------------------CUSTOMER REVIEW SECTION START------------------------------------->
+        <!-------------------------CUSTOMER REVIEW SECTION START------------------------------------->
+        <section id="customer-review-section">
+            
+        </section>
 
 
 
