Adding Overview Section

--- a/index.html
+++ b/index.html
@@ -801,6 +801,7 @@
         <div id="recent-collections-section">
             <h2 class="container collection-title">Recent Collections</h2>
             <div class="collections-background">
+                <img src="img/background/food-background.jpg" alt="recent-collections-background">
                 <div id="carouselFirstControls" class="carousel slide first-carousel" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -2138,6 +2139,144 @@
         <!-------------------------FAQ SECTION END------------------------------------->
         <!-------------------------FAQ SECTION END------------------------------------->
 
+
+
+
+        <!-------------------------OVERVIEW SECTION START------------------------------------->
+        <!-------------------------OVERVIEW SECTION START------------------------------------->
+        <!-------------------------OVERVIEW SECTION START------------------------------------->
+        <section id="overview-section">
+            <div class="container first-overview">
+                <div class="title-box container-fluid"> 
+                    <div class="section-title">
+                        <h2 class="container-titles">Top Products</h2>
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-4 g-4">
+                    <div class="col">
+                        <div class="card-tag first-tag">
+                            <p class="inside-tag">Best Sale</p>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="img/vegetables/cabbage.jpg" alt="overview-products">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-tag second-tag">
+                            <p class="inside-tag">New</p>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="img/vegetables/lemon.jpg" alt="overview-products">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-tag third-tag">
+                            <p class="inside-tag">Save 15%</p>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="img/vegetables/motorshuti.jpg" alt="overview-products">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container other-overview">
+                <div class="title-box container-fluid"> 
+                    <div class="section-title">
+                        <h2 class="container-titles">Recently Added</h2>
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-4 g-4">
+                    <div class="col">
+                        <div class="card-tag second-tag">
+                            <p class="inside-tag">New</p>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="img/vegetables/broccoli.jpg" alt="overview-products">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-tag first-tag">
+                            <p class="inside-tag">Best Sale</p>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="img/fruits/pomegranate.jpg" alt="overview-products">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-tag third-tag">
+                            <p class="inside-tag">Save 20%</p>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="img/fruits/strawberry.jpg" alt="overview-products">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container other-overview">
+                <div class="title-box container-fluid"> 
+                    <div class="section-title">
+                        <h2 class="container-titles">Trending Now</h2>
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-4 g-4">
+                    <div class="col">
+                        <div class="card-tag second-tag">
+                            <p class="inside-tag">New</p>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="img/vegetables/capsicum.jpg" alt="overview-products">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-tag second-tag">
+                            <p class="inside-tag">New</p>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="img/vegetables/peas.jpg" alt="overview-products">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card-tag first-tag">
+                            <p class="inside-tag">Best Sale</p>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="img/vegetables/zucchini.jpg" alt="overview-products">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-------------------------OVERVIEW SECTION END------------------------------------->
+        <!-------------------------OVERVIEW SECTION END------------------------------------->
+        <!-------------------------OVERVIEW SECTION END------------------------------------->
+        
 
 
 
