Adding Contact Us Section

--- a/index.html
+++ b/index.html
@@ -2449,13 +2449,13 @@
                         </div>
                     </div>
                     <div class="call-to-action-details">
-                        <p class="cta-save-per">Save percentage</p>
-                        <h1 class="cta-offer-title">Product name</h1>
-                        <h1 class="cta-offer-price">Product price</h1>
-                        <p class="cta-offer-msg">Discount message</p>
+                        <p class="cta-save-per">Save Upto 50%</p>
+                        <h1 class="cta-offer-title">Fresh Mutton</h1>
+                        <h1 class="cta-offer-price">430Tk Only</h1>
+                        <p class="cta-offer-msg">OFFER AVAILABLE ALL MEAT & FISH</p>
                         <p class="cta-product-type">Meat & Fish</p>
                         <div class="cta-button-area">
-                            <button class="cta-button">Buy Now</button>
+                        <button class="cta-button">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -2473,8 +2473,75 @@
         <!-------------------------CONTACT US SECTION START------------------------------------->
         <!-------------------------CONTACT US SECTION START------------------------------------->
         <div id="contact-us-section">
+            <div class="contact-section" id="contact">
+                <div class="image-area"></div>
+                <div class="form-area">
+                    <div class="form-wrap">
+                        <div class="title">
+                            <h1>Contact Us</h1>
+                        </div>
+                        <div class="contact-area">
+                            <div class="contact-info">
+                                <h2>Information</h2>
+                                <div class="contact-address">
+                                    <span class="icon-map-marked-alt"></span>
+                                    <p>North Tower, 5th Floor,<br>
+                                        2125 Hudson St, NY 2577</p>
+                                </div>
+                                <div class="contact-mail">
+                                    <span class="icon-envelope"></span>
+                                    <p>info@gmail.com</p>
+                                </div>
+    
+                                <div class="contact-phone">
+                                    <span class="icon-phone-alt"></span>
+                                    <p>+88 0123-456-789</p>
+                                </div>
+                            </div>
+                            <form class="contact-form">
+                                <div class="name-field">
+                                    <div class="input-area">
+                                        <input type="text" id="fname" autocomplete="off" required>
+                                        <label for="fname">First Name</label>
+                                    </div>
+                                    <div class="input-area">
+                                        <input type="text" id="lname" autocomplete="off" required>
+                                        <label for="lname">Last Name</label>
+                                    </div>
+                                </div>
+                                <div class="input-area">
+                                    <input type="email" id="email" autocomplete="off" required>
+                                    <label for="email">Email</label>
+                                </div>
+                                <div class="message-area">
+                                    <textarea id="message" required></textarea>
+                                    <label for="message">Message</label>
+                                </div>
+                                <div class="btn">
+                                    <button type="submit">Send</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-------------------------CONTACT US SECTION END------------------------------------->
+        <!-------------------------CONTACT US SECTION END------------------------------------->
+        <!-------------------------CONTACT US SECTION END------------------------------------->
+
+
+
+
+        <!-------------------------FOOTER SECTION START------------------------------------->
+        <!-------------------------FOOTER SECTION START------------------------------------->
+        <!-------------------------FOOTER SECTION START------------------------------------->
+        <div id="footer-section">
             
         </div>
+        <!-------------------------FOOTER SECTION END------------------------------------->
+        <!-------------------------FOOTER SECTION END------------------------------------->
+        <!-------------------------FOOTER SECTION END------------------------------------->
 
 
 
